// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log entries E2E tests when creating log entries will allow admins to create log entries for other users 1`] = `
{
  "air": [
    {
      "count": 2,
      "endPressure": 1140,
      "material": "fe",
      "name": "golden minimalism",
      "o2Percent": 26.9,
      "pressureUnit": "psi",
      "startPressure": 3210,
      "volume": 18,
      "workingPressure": 207,
    },
  ],
  "conditions": {
    "temperatureUnit": "C",
  },
  "createdAt": 1721740637900,
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": 1582583450944,
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "depthUnit": "m",
    "maxDepth": 28.2,
  },
  "equipment": {
    "weight": 4.8,
    "weightUnit": "lbs",
  },
  "id": "de92700b-73c2-478b-90b9-167d3e2b1383",
  "logNumber": 102,
  "notes": "I did a dive!",
  "tags": [],
  "timing": {
    "bottomTime": 46,
    "duration": 58.32,
    "entryTime": 1710940320000,
    "timezone": "Asia/Tokyo",
  },
  "updatedAt": 1721744059838,
}
`;

exports[`Log entries E2E tests when creating log entries will create and return a new log entry 1`] = `
{
  "air": [
    {
      "count": 2,
      "endPressure": 1140,
      "material": "fe",
      "name": "golden minimalism",
      "o2Percent": 26.9,
      "pressureUnit": "psi",
      "startPressure": 3210,
      "volume": 18,
      "workingPressure": 207,
    },
  ],
  "conditions": {
    "temperatureUnit": "C",
  },
  "createdAt": 1721740637799,
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": 1582583450944,
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "depthUnit": "m",
    "maxDepth": 28.2,
  },
  "equipment": {
    "weight": 4.8,
    "weightUnit": "lbs",
  },
  "id": "ab81b769-109b-4920-aa49-24a17a4d939e",
  "logNumber": 102,
  "notes": "I did a dive!",
  "site": {
    "averageRating": 3.09,
    "depth": {
      "depth": 12.86,
      "unit": "m",
    },
    "description": "Cui sopor assumenda minus conduco vehemens varius ipsa uredo. Strenuus conculco bis. Capitulus teneo desidero dedecor arbitro voluptatum.",
    "gps": {
      "lat": -57.4046,
      "lon": 39.6424,
    },
    "id": "5b125836-5b5b-4ccc-a56e-58891f8bebfc",
    "location": "West Emanuelbury",
    "name": "alert awesome intuition",
  },
  "tags": [],
  "timing": {
    "bottomTime": 46,
    "duration": 58.32,
    "entryTime": 1710940320000,
    "timezone": "Asia/Tokyo",
  },
  "updatedAt": 1721744336813,
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "too_small",
      "exact": false,
      "inclusive": false,
      "message": "Number must be greater than 0",
      "minimum": 0,
      "path": [
        "logNumber",
      ],
      "type": "number",
    },
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "timing",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "notes",
      ],
      "received": "number",
    },
  ],
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the request body is missing 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "timing",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the request body is missing required fields 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "timing",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the site ID cannot be found 1`] = `"Dive site with ID "37a214f6-6167-4468-947d-b3171a0425fd" not found."`;

exports[`Log entries E2E tests when fetching recent dive operators will allow admins to query the most recent dive operators for any user 1`] = `
[
  {
    "id": "850fe12a-1873-4a61-9e75-f793f1752688",
    "name": "soft, ornery grape",
  },
  {
    "id": "509efe6b-00cd-4393-9017-dec82dc4154a",
    "name": "vigorous, average goddess",
  },
  {
    "id": "e1282190-0709-4af9-a8b5-043330b342db",
    "name": "opulent, wilted wheel",
  },
  {
    "id": "be616b6d-35ec-42c9-a0bc-5d5fecac99e3",
    "name": "fortunate, young chives",
  },
  {
    "id": "d18d63a5-3552-4f5e-9379-4c3a4786cbaa",
    "name": "nutty, husky badger",
  },
  {
    "id": "c6a2f063-3876-469d-b479-ed3c67bd3f34",
    "name": "messy, unimportant accord",
  },
  {
    "id": "c2f48c4e-cc27-4099-bd0c-00e9d43fc222",
    "name": "shabby, handsome north",
  },
  {
    "id": "aac1ef91-097d-4437-ae43-55a2e4d6f0fd",
    "name": "shimmering, genuine drama",
  },
  {
    "id": "9034a701-68ae-4653-aebd-e5725c9debc4",
    "name": "athletic, poised cursor",
  },
  {
    "id": "ba4e0815-6a63-4ad3-9db8-85a1d5469d6f",
    "name": "sure-footed, smoggy acknowledgment",
  },
]
`;

exports[`Log entries E2E tests when fetching recent dive operators will return a 400 response if query string is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "count",
      ],
      "received": "nan",
    },
  ],
}
`;

exports[`Log entries E2E tests when fetching recent dive operators will return the most recently visited dive operators 1`] = `
[
  {
    "id": "850fe12a-1873-4a61-9e75-f793f1752688",
    "name": "soft, ornery grape",
  },
  {
    "id": "65704209-2883-4851-be84-78a6b95b9ad3",
    "name": "miniature, unlawful hydrocarbon",
  },
  {
    "id": "5b8b9f97-3b8f-4510-a75f-c4ac682ca555",
    "name": "passionate, attractive checkroom",
  },
  {
    "id": "509efe6b-00cd-4393-9017-dec82dc4154a",
    "name": "vigorous, average goddess",
  },
  {
    "id": "e1282190-0709-4af9-a8b5-043330b342db",
    "name": "opulent, wilted wheel",
  },
  {
    "id": "bfe6330e-71b6-4065-9fd5-35f946f61c72",
    "name": "mysterious, artistic dude",
  },
  {
    "id": "be616b6d-35ec-42c9-a0bc-5d5fecac99e3",
    "name": "fortunate, young chives",
  },
  {
    "id": "18de4372-77ad-4fc2-8e7a-8899fd4fedb6",
    "name": "general, useless duel",
  },
  {
    "id": "d18d63a5-3552-4f5e-9379-4c3a4786cbaa",
    "name": "nutty, husky badger",
  },
  {
    "id": "c6a2f063-3876-469d-b479-ed3c67bd3f34",
    "name": "messy, unimportant accord",
  },
  {
    "id": "c2f48c4e-cc27-4099-bd0c-00e9d43fc222",
    "name": "shabby, handsome north",
  },
  {
    "id": "aac1ef91-097d-4437-ae43-55a2e4d6f0fd",
    "name": "shimmering, genuine drama",
  },
  {
    "id": "9034a701-68ae-4653-aebd-e5725c9debc4",
    "name": "athletic, poised cursor",
  },
  {
    "id": "ba4e0815-6a63-4ad3-9db8-85a1d5469d6f",
    "name": "sure-footed, smoggy acknowledgment",
  },
  {
    "id": "b7384c5c-9592-4060-a069-6f102fd76312",
    "name": "necessary, trivial savory",
  },
]
`;

exports[`Log entries E2E tests when fetching recent dive sites will allow admins to query the most recent dive sites for any user 1`] = `
[
  {
    "id": "5b125836-5b5b-4ccc-a56e-58891f8bebfc",
    "name": "alert awesome intuition",
  },
  {
    "id": "74aa1202-9d61-443b-b8f5-44dde5ef18d5",
    "name": "exotic warmhearted aside",
  },
  {
    "id": "7737963a-bf8b-44ee-955f-066a098ef80b",
    "name": "ideal blond spume",
  },
  {
    "id": "5e67eec8-fc13-4059-ab81-83b91be3c4fd",
    "name": "nifty idle roof",
  },
  {
    "id": "3f760648-6dd0-4fa9-a023-7bc393a1ac44",
    "name": "ringed regal temporary",
  },
  {
    "id": "90bcafd4-90b6-41d5-9b70-db36b470dcaf",
    "name": "shameful glorious noodles",
  },
  {
    "id": "3b9bdf22-0b5b-4f6b-9ec4-f5dfdb0bebe1",
    "name": "specific dead ramen",
  },
  {
    "id": "60c05ea8-b642-48cf-a2f3-39e7eb2bc8b5",
    "name": "steep aromatic broccoli",
  },
  {
    "id": "a078a554-1a01-4ca3-8d3a-682f1c23e64d",
    "name": "sympathetic mortified taxicab",
  },
  {
    "id": "ed537618-c11d-468c-9e88-867c288e649f",
    "name": "well-worn upbeat trillion",
  },
]
`;

exports[`Log entries E2E tests when fetching recent dive sites will return a 400 response if query string is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "count",
      ],
      "received": "nan",
    },
  ],
}
`;

exports[`Log entries E2E tests when fetching recent dive sites will return the most recently visited dive sites 1`] = `
[
  {
    "id": "5b125836-5b5b-4ccc-a56e-58891f8bebfc",
    "name": "alert awesome intuition",
  },
  {
    "id": "f2026af7-0f73-4fc0-b29b-491dc2846842",
    "name": "caring nutty grub",
  },
  {
    "id": "74aa1202-9d61-443b-b8f5-44dde5ef18d5",
    "name": "exotic warmhearted aside",
  },
  {
    "id": "7737963a-bf8b-44ee-955f-066a098ef80b",
    "name": "ideal blond spume",
  },
  {
    "id": "4d91a56c-f68a-4c11-9b06-ed1030cecec0",
    "name": "meaty weird good",
  },
  {
    "id": "5e67eec8-fc13-4059-ab81-83b91be3c4fd",
    "name": "nifty idle roof",
  },
  {
    "id": "3f760648-6dd0-4fa9-a023-7bc393a1ac44",
    "name": "ringed regal temporary",
  },
  {
    "id": "90bcafd4-90b6-41d5-9b70-db36b470dcaf",
    "name": "shameful glorious noodles",
  },
  {
    "id": "3b9bdf22-0b5b-4f6b-9ec4-f5dfdb0bebe1",
    "name": "specific dead ramen",
  },
  {
    "id": "92c546b4-b354-4435-a233-ff3ed2c311a9",
    "name": "squeaky scaly sled",
  },
  {
    "id": "22db73ff-3551-4abe-953d-8ee80d9b6237",
    "name": "steel monthly hypothesis",
  },
  {
    "id": "60c05ea8-b642-48cf-a2f3-39e7eb2bc8b5",
    "name": "steep aromatic broccoli",
  },
  {
    "id": "a078a554-1a01-4ca3-8d3a-682f1c23e64d",
    "name": "sympathetic mortified taxicab",
  },
  {
    "id": "ed537618-c11d-468c-9e88-867c288e649f",
    "name": "well-worn upbeat trillion",
  },
  {
    "id": "b5a31451-0d07-42ad-9e86-de5d63bbf582",
    "name": "wry boring examiner",
  },
]
`;

exports[`Log entries E2E tests when retrieving single log entries will allow an admin to view any log entry 1`] = `
{
  "air": [
    {
      "count": 2,
      "endPressure": 830,
      "hePercent": 15,
      "material": "al",
      "name": "unfortunate harmony",
      "o2Percent": 21.6,
      "pressureUnit": "psi",
      "startPressure": 3370,
      "volume": 12,
      "workingPressure": 300,
    },
    {
      "count": 2,
      "endPressure": 880,
      "material": "fe",
      "name": "young brushing",
      "pressureUnit": "psi",
      "startPressure": 3430,
      "volume": 15,
      "workingPressure": 237,
    },
  ],
  "conditions": {
    "airTemperature": 21.8,
    "current": 3.6,
    "temperatureUnit": "C",
    "weather": "sunny",
  },
  "createdAt": "2023-02-03T15:50:47.000Z",
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": 1582583450944,
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "averageDepth": 19.52,
    "depthUnit": "m",
    "maxDepth": 39.04,
  },
  "equipment": {
    "boots": false,
    "camera": true,
    "exposureSuit": "rashguard",
    "gloves": true,
    "hood": true,
    "scooter": false,
    "torch": false,
    "trimCorrectness": "kneesDown",
    "weight": 11.5,
    "weightCorrectness": "under",
    "weightUnit": "kg",
  },
  "id": "216ddf91-9cd4-4345-99a3-cfeea61ad12b",
  "logNumber": 270,
  "notes": "Creptio peior recusandae capillus decipio alveus calco tutis carpo. Inflammatio sordeo suffragium ipsa exercitationem. Vereor verbera conitor super vitium suadeo voluptate.",
  "operator": {
    "address": "1880 W Bridge Street Suite 633, South Felipestead, WY, 04394-9613",
    "description": "Vomer carpo cogito pauci recusandae. Arto apto copiose animus. Xiphias civitas voluptatem ademptio tabesco viridis.
Compello atqui comprehendo theatrum caterva abstergo color thymbra vociferor benevolentia. Tutamen amplitudo curis atavus. Appono somniculosus delicate admoveo.",
    "gps": {
      "lat": 6.9546,
      "lon": -52.6869,
    },
    "id": "850fe12a-1873-4a61-9e75-f793f1752688",
    "logo": "https://loremflickr.com/128/128?lock=2275161833209856",
    "name": "soft, ornery grape",
    "phone": "1-869-633-8778 x70097",
    "slug": "soft-ornery-grape",
    "website": "https://fake-endive.info/",
  },
  "site": {
    "averageRating": 1.43,
    "depth": {
      "depth": 36.14,
      "unit": "ft",
    },
    "description": "Mollitia crebro solutio comedo velit theca cresco. Tardus una attonbitus aurum versus confero triumphus canto sumptus. Asporto dolore adaugeo censura amplus synagoga unde demoror ara commodo.",
    "gps": {
      "lat": 27.2481,
      "lon": -174.3613,
    },
    "id": "b51c9d49-2df1-4c9f-96bf-73a252036880",
    "location": "East Shawnhaven",
    "name": "original pitiful resource",
  },
  "tags": [],
  "timing": {
    "bottomTime": 1319,
    "duration": 1451,
    "entryTime": 1699418696731,
    "timezone": "Asia/Famagusta",
  },
}
`;

exports[`Log entries E2E tests when retrieving single log entries will return the requested log entry 1`] = `
{
  "air": [
    {
      "count": 2,
      "endPressure": 830,
      "hePercent": 15,
      "material": "al",
      "name": "unfortunate harmony",
      "o2Percent": 21.6,
      "pressureUnit": "psi",
      "startPressure": 3370,
      "volume": 12,
      "workingPressure": 300,
    },
    {
      "count": 2,
      "endPressure": 880,
      "material": "fe",
      "name": "young brushing",
      "pressureUnit": "psi",
      "startPressure": 3430,
      "volume": 15,
      "workingPressure": 237,
    },
  ],
  "conditions": {
    "airTemperature": 21.8,
    "current": 3.6,
    "temperatureUnit": "C",
    "weather": "sunny",
  },
  "createdAt": "2023-02-03T15:50:47.000Z",
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": 1582583450944,
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "averageDepth": 19.52,
    "depthUnit": "m",
    "maxDepth": 39.04,
  },
  "equipment": {
    "boots": false,
    "camera": true,
    "exposureSuit": "rashguard",
    "gloves": true,
    "hood": true,
    "scooter": false,
    "torch": false,
    "trimCorrectness": "kneesDown",
    "weight": 11.5,
    "weightCorrectness": "under",
    "weightUnit": "kg",
  },
  "id": "216ddf91-9cd4-4345-99a3-cfeea61ad12b",
  "logNumber": 270,
  "notes": "Creptio peior recusandae capillus decipio alveus calco tutis carpo. Inflammatio sordeo suffragium ipsa exercitationem. Vereor verbera conitor super vitium suadeo voluptate.",
  "operator": {
    "address": "1880 W Bridge Street Suite 633, South Felipestead, WY, 04394-9613",
    "description": "Vomer carpo cogito pauci recusandae. Arto apto copiose animus. Xiphias civitas voluptatem ademptio tabesco viridis.
Compello atqui comprehendo theatrum caterva abstergo color thymbra vociferor benevolentia. Tutamen amplitudo curis atavus. Appono somniculosus delicate admoveo.",
    "gps": {
      "lat": 6.9546,
      "lon": -52.6869,
    },
    "id": "850fe12a-1873-4a61-9e75-f793f1752688",
    "logo": "https://loremflickr.com/128/128?lock=2275161833209856",
    "name": "soft, ornery grape",
    "phone": "1-869-633-8778 x70097",
    "slug": "soft-ornery-grape",
    "website": "https://fake-endive.info/",
  },
  "site": {
    "averageRating": 1.43,
    "depth": {
      "depth": 36.14,
      "unit": "ft",
    },
    "description": "Mollitia crebro solutio comedo velit theca cresco. Tardus una attonbitus aurum versus confero triumphus canto sumptus. Asporto dolore adaugeo censura amplus synagoga unde demoror ara commodo.",
    "gps": {
      "lat": 27.2481,
      "lon": -174.3613,
    },
    "id": "b51c9d49-2df1-4c9f-96bf-73a252036880",
    "location": "East Shawnhaven",
    "name": "original pitiful resource",
  },
  "tags": [],
  "timing": {
    "bottomTime": 1319,
    "duration": 1451,
    "entryTime": 1699418696731,
    "timezone": "Asia/Famagusta",
  },
}
`;

exports[`Log entries E2E tests when searching log entries will allow a search with parameters 1`] = `
{
  "data": [
    {
      "air": undefined,
      "entryTime": 1679179491134,
      "id": "33792d0a-b8f6-4a8c-8280-156254193aa5",
      "owner": "Ayla.Rippin",
      "site": "far-off critical machine",
    },
    {
      "air": undefined,
      "entryTime": 1680075577702,
      "id": "e06b6a65-f4c9-4486-8f24-020b91109cf7",
      "owner": "Ayla.Rippin",
      "site": "deadly lean mobile",
    },
    {
      "air": undefined,
      "entryTime": 1680585547793,
      "id": "d34bd212-d0ce-456c-8b04-1b2206686299",
      "owner": "Ayla.Rippin",
      "site": "silky sharp brilliant",
    },
    {
      "air": undefined,
      "entryTime": 1680872051148,
      "id": "a5ce9dd4-f436-4930-831c-497eac34256a",
      "owner": "Ayla.Rippin",
      "site": "well-worn upbeat trillion",
    },
    {
      "air": undefined,
      "entryTime": 1680960960889,
      "id": "73dbc6e1-465f-4911-9a64-c3164448e17d",
      "owner": "Ayla.Rippin",
      "site": "yummy fitting waterwheel",
    },
    {
      "air": undefined,
      "entryTime": 1683614665216,
      "id": "d4afca6c-61bd-47ea-89d7-afbb228fd65d",
      "owner": "Ayla.Rippin",
      "site": "joint bogus exit",
    },
    {
      "air": undefined,
      "entryTime": 1684921970536,
      "id": "3c03c6ae-cf09-4ad8-91a4-e3e3508b7a29",
      "owner": "Ayla.Rippin",
      "site": "modern sorrowful girdle",
    },
    {
      "air": undefined,
      "entryTime": 1690727643431,
      "id": "c9cde5b9-689f-49d2-a25b-f2a271ded83a",
      "owner": "Ayla.Rippin",
      "site": "rundown joyous put",
    },
  ],
  "totalCount": 28,
}
`;

exports[`Log entries E2E tests when searching log entries will allow admins to search another user's log entries 1`] = `
[
  {
    "entryTime": 1736226519483,
    "id": "a3ac30e7-fa6d-42f9-aa6e-bd017d68fd5b",
    "owner": "Ayla.Rippin",
    "site": "well-worn upbeat trillion",
  },
  {
    "entryTime": 1735301423550,
    "id": "0ff99a5d-ca17-46e7-8626-54066d815513",
    "owner": "Ayla.Rippin",
    "site": "specific dead ramen",
  },
  {
    "entryTime": 1732923961845,
    "id": "3701a341-01db-4f8d-bf33-cc6dbf159d9a",
    "owner": "Ayla.Rippin",
    "site": "ideal blond spume",
  },
  {
    "entryTime": 1732712900671,
    "id": "1301961d-03d7-4389-a74b-b217c152c4cd",
    "owner": "Ayla.Rippin",
    "site": "alert awesome intuition",
  },
  {
    "entryTime": 1731768911222,
    "id": "8694aeee-dcee-4f0d-bb09-b092b492a691",
    "owner": "Ayla.Rippin",
    "site": "ringed regal temporary",
  },
  {
    "entryTime": 1731735167115,
    "id": "3adbd60c-1784-42fe-af8c-f308067901e6",
    "owner": "Ayla.Rippin",
    "site": "exotic warmhearted aside",
  },
  {
    "entryTime": 1731194345960,
    "id": "3c1dbe45-33f9-4de6-90f8-e63293459762",
    "owner": "Ayla.Rippin",
    "site": "shameful glorious noodles",
  },
  {
    "entryTime": 1730706665195,
    "id": "5cf6e1a0-e823-4feb-ad1d-813e87ff99c3",
    "owner": "Ayla.Rippin",
    "site": "nifty idle roof",
  },
  {
    "entryTime": 1728828406020,
    "id": "2cfc1d0e-4821-44fc-a6e2-ac8e74c7437c",
    "owner": "Ayla.Rippin",
    "site": "sympathetic mortified taxicab",
  },
  {
    "entryTime": 1727763724851,
    "id": "d92a2a9f-9519-47f0-a2f7-390b5c355d38",
    "owner": "Ayla.Rippin",
    "site": "steep aromatic broccoli",
  },
  {
    "entryTime": 1726083241344,
    "id": "3300a246-ed0d-4109-8248-ac4a63485c5d",
    "owner": "Ayla.Rippin",
    "site": "caring nutty grub",
  },
  {
    "entryTime": 1725471553446,
    "id": "8a3ee274-c876-4aa4-9a4c-422c5dee04fc",
    "owner": "Ayla.Rippin",
    "site": "steel monthly hypothesis",
  },
  {
    "entryTime": 1725217548759,
    "id": "944c0bb4-f554-4ca3-83bf-410284c8ce8c",
    "owner": "Ayla.Rippin",
    "site": "meaty weird good",
  },
  {
    "entryTime": 1723883955035,
    "id": "f983cf3b-33e5-46f5-892d-45a730a94751",
    "owner": "Ayla.Rippin",
    "site": "squeaky scaly sled",
  },
  {
    "entryTime": 1722836182903,
    "id": "0eb84b46-aa52-4084-b1d2-a21ee43767f2",
    "owner": "Ayla.Rippin",
    "site": "wry boring examiner",
  },
  {
    "entryTime": 1719666112054,
    "id": "eeca0816-894a-471f-920c-ab26825af66b",
    "owner": "Ayla.Rippin",
    "site": "apt colossal initial",
  },
  {
    "entryTime": 1719256838577,
    "id": "544573bf-8793-49c6-828c-b1d455b64b27",
    "owner": "Ayla.Rippin",
    "site": "remarkable unique shoelace",
  },
  {
    "entryTime": 1717948828191,
    "id": "63ca720e-9aa9-4fe5-b453-796182098165",
    "owner": "Ayla.Rippin",
    "site": "simplistic key cupcake",
  },
  {
    "entryTime": 1717633825989,
    "id": "142b11cc-4051-4fd7-b07e-92f5238c9b0a",
    "owner": "Ayla.Rippin",
    "site": "legal incomplete trachoma",
  },
  {
    "entryTime": 1713435407984,
    "id": "999c08cc-24b6-4f06-8670-1bd537ba57b4",
    "owner": "Ayla.Rippin",
    "site": "exotic warmhearted aside",
  },
  {
    "entryTime": 1710384619990,
    "id": "e0e04ebd-0d72-4737-ae6f-e4ff6f73b773",
    "owner": "Ayla.Rippin",
    "site": "humming past mathematics",
  },
  {
    "entryTime": 1709047763284,
    "id": "4b4f8673-789e-4e95-bc4e-63a178af2004",
    "owner": "Ayla.Rippin",
    "site": "original pitiful resource",
  },
  {
    "entryTime": 1708646790612,
    "id": "21f30425-de80-4f19-91c6-e4b952b300a6",
    "owner": "Ayla.Rippin",
    "site": "bustling normal convert",
  },
  {
    "entryTime": 1706303469623,
    "id": "d2759583-35b7-4560-a8c2-a45d98f5d21c",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": 1703119088064,
    "id": "e8d1f498-eb56-4a8d-95af-b9687a99069d",
    "owner": "Ayla.Rippin",
    "site": "voluminous heartfelt imprisonment",
  },
  {
    "entryTime": 1703042255618,
    "id": "506d1720-993d-41b2-bf6b-416f751ede0e",
    "owner": "Ayla.Rippin",
    "site": "damp forsaken chapter",
  },
  {
    "entryTime": 1702936868184,
    "id": "4a0d0b09-80dc-4c9b-8757-6629056fb53d",
    "owner": "Ayla.Rippin",
    "site": "wry boring examiner",
  },
  {
    "entryTime": 1701475649865,
    "id": "e9de3454-9596-4d11-8195-674351028ff7",
    "owner": "Ayla.Rippin",
    "site": "ideal blond spume",
  },
  {
    "entryTime": 1701404713612,
    "id": "41e8e28d-461d-4bd0-9149-d430e1b2f7a7",
    "owner": "Ayla.Rippin",
    "site": "steep aromatic broccoli",
  },
  {
    "entryTime": 1700475645646,
    "id": "dd3b3ef1-ae94-4a9e-a991-ec1fa2af43c5",
    "owner": "Ayla.Rippin",
    "site": "bold staid lode",
  },
  {
    "entryTime": 1699468421114,
    "id": "3efdb5cf-2128-49d3-8ce4-9c43744a32c9",
    "owner": "Ayla.Rippin",
    "site": "humble crazy cockpit",
  },
  {
    "entryTime": 1699418696731,
    "id": "216ddf91-9cd4-4345-99a3-cfeea61ad12b",
    "owner": "Ayla.Rippin",
    "site": "original pitiful resource",
  },
  {
    "entryTime": 1699088498825,
    "id": "1617f76b-fc65-4a6e-8c12-ef1ff35efac0",
    "owner": "Ayla.Rippin",
    "site": "modern sorrowful girdle",
  },
  {
    "entryTime": 1696049056141,
    "id": "a520b5da-51ad-42b6-b4e5-63ba0d35bc18",
    "owner": "Ayla.Rippin",
    "site": "frequent realistic paramedic",
  },
  {
    "entryTime": 1694555843727,
    "id": "f98f941c-bca4-4680-963e-537fe767b41e",
    "owner": "Ayla.Rippin",
    "site": "whirlwind measly subset",
  },
  {
    "entryTime": 1693208159250,
    "id": "8d4659f2-40ae-489b-bb81-05e0102a8fcf",
    "owner": "Ayla.Rippin",
    "site": "utter extraneous calm",
  },
  {
    "entryTime": 1692484926006,
    "id": "cd44e36d-7b86-4783-bff2-bdcd9634dfa7",
    "owner": "Ayla.Rippin",
    "site": "lost profuse garlic",
  },
  {
    "entryTime": 1692105390941,
    "id": "3207ada6-eadc-4d3a-97cc-aae5d9e5e463",
    "owner": "Ayla.Rippin",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": 1691314875221,
    "id": "51c35886-a95b-4305-be3a-46e8b36a3a4d",
    "owner": "Ayla.Rippin",
    "site": "meaty weird good",
  },
  {
    "entryTime": 1690727643431,
    "id": "c9cde5b9-689f-49d2-a25b-f2a271ded83a",
    "owner": "Ayla.Rippin",
    "site": "rundown joyous put",
  },
  {
    "entryTime": 1684921970536,
    "id": "3c03c6ae-cf09-4ad8-91a4-e3e3508b7a29",
    "owner": "Ayla.Rippin",
    "site": "modern sorrowful girdle",
  },
  {
    "entryTime": 1683614665216,
    "id": "d4afca6c-61bd-47ea-89d7-afbb228fd65d",
    "owner": "Ayla.Rippin",
    "site": "joint bogus exit",
  },
  {
    "entryTime": 1680960960889,
    "id": "73dbc6e1-465f-4911-9a64-c3164448e17d",
    "owner": "Ayla.Rippin",
    "site": "yummy fitting waterwheel",
  },
  {
    "entryTime": 1680872051148,
    "id": "a5ce9dd4-f436-4930-831c-497eac34256a",
    "owner": "Ayla.Rippin",
    "site": "well-worn upbeat trillion",
  },
  {
    "entryTime": 1680585547793,
    "id": "d34bd212-d0ce-456c-8b04-1b2206686299",
    "owner": "Ayla.Rippin",
    "site": "silky sharp brilliant",
  },
  {
    "entryTime": 1680075577702,
    "id": "e06b6a65-f4c9-4486-8f24-020b91109cf7",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": 1679179491134,
    "id": "33792d0a-b8f6-4a8c-8280-156254193aa5",
    "owner": "Ayla.Rippin",
    "site": "far-off critical machine",
  },
  {
    "entryTime": 1678126984516,
    "id": "a83b7a6d-60a2-46b0-af93-eb8a55bc280e",
    "owner": "Ayla.Rippin",
    "site": "monumental wild standardization",
  },
  {
    "entryTime": 1677165480734,
    "id": "d20bd6ce-3855-415d-88e1-87d3f17799e5",
    "owner": "Ayla.Rippin",
    "site": "good-natured bountiful relay",
  },
  {
    "entryTime": 1676339228868,
    "id": "a6e3d3bf-bbfd-42ba-b994-8dcc48b322d6",
    "owner": "Ayla.Rippin",
    "site": "spotless gifted gallon",
  },
]
`;

exports[`Log entries E2E tests when searching log entries will perform a basic search for log entries 1`] = `
[
  {
    "entryTime": 1736226519483,
    "id": "a3ac30e7-fa6d-42f9-aa6e-bd017d68fd5b",
    "owner": "Ayla.Rippin",
    "site": "well-worn upbeat trillion",
  },
  {
    "entryTime": 1735301423550,
    "id": "0ff99a5d-ca17-46e7-8626-54066d815513",
    "owner": "Ayla.Rippin",
    "site": "specific dead ramen",
  },
  {
    "entryTime": 1732923961845,
    "id": "3701a341-01db-4f8d-bf33-cc6dbf159d9a",
    "owner": "Ayla.Rippin",
    "site": "ideal blond spume",
  },
  {
    "entryTime": 1732712900671,
    "id": "1301961d-03d7-4389-a74b-b217c152c4cd",
    "owner": "Ayla.Rippin",
    "site": "alert awesome intuition",
  },
  {
    "entryTime": 1731768911222,
    "id": "8694aeee-dcee-4f0d-bb09-b092b492a691",
    "owner": "Ayla.Rippin",
    "site": "ringed regal temporary",
  },
  {
    "entryTime": 1731735167115,
    "id": "3adbd60c-1784-42fe-af8c-f308067901e6",
    "owner": "Ayla.Rippin",
    "site": "exotic warmhearted aside",
  },
  {
    "entryTime": 1731194345960,
    "id": "3c1dbe45-33f9-4de6-90f8-e63293459762",
    "owner": "Ayla.Rippin",
    "site": "shameful glorious noodles",
  },
  {
    "entryTime": 1730706665195,
    "id": "5cf6e1a0-e823-4feb-ad1d-813e87ff99c3",
    "owner": "Ayla.Rippin",
    "site": "nifty idle roof",
  },
  {
    "entryTime": 1728828406020,
    "id": "2cfc1d0e-4821-44fc-a6e2-ac8e74c7437c",
    "owner": "Ayla.Rippin",
    "site": "sympathetic mortified taxicab",
  },
  {
    "entryTime": 1727763724851,
    "id": "d92a2a9f-9519-47f0-a2f7-390b5c355d38",
    "owner": "Ayla.Rippin",
    "site": "steep aromatic broccoli",
  },
  {
    "entryTime": 1726083241344,
    "id": "3300a246-ed0d-4109-8248-ac4a63485c5d",
    "owner": "Ayla.Rippin",
    "site": "caring nutty grub",
  },
  {
    "entryTime": 1725471553446,
    "id": "8a3ee274-c876-4aa4-9a4c-422c5dee04fc",
    "owner": "Ayla.Rippin",
    "site": "steel monthly hypothesis",
  },
  {
    "entryTime": 1725217548759,
    "id": "944c0bb4-f554-4ca3-83bf-410284c8ce8c",
    "owner": "Ayla.Rippin",
    "site": "meaty weird good",
  },
  {
    "entryTime": 1723883955035,
    "id": "f983cf3b-33e5-46f5-892d-45a730a94751",
    "owner": "Ayla.Rippin",
    "site": "squeaky scaly sled",
  },
  {
    "entryTime": 1722836182903,
    "id": "0eb84b46-aa52-4084-b1d2-a21ee43767f2",
    "owner": "Ayla.Rippin",
    "site": "wry boring examiner",
  },
  {
    "entryTime": 1719666112054,
    "id": "eeca0816-894a-471f-920c-ab26825af66b",
    "owner": "Ayla.Rippin",
    "site": "apt colossal initial",
  },
  {
    "entryTime": 1719256838577,
    "id": "544573bf-8793-49c6-828c-b1d455b64b27",
    "owner": "Ayla.Rippin",
    "site": "remarkable unique shoelace",
  },
  {
    "entryTime": 1717948828191,
    "id": "63ca720e-9aa9-4fe5-b453-796182098165",
    "owner": "Ayla.Rippin",
    "site": "simplistic key cupcake",
  },
  {
    "entryTime": 1717633825989,
    "id": "142b11cc-4051-4fd7-b07e-92f5238c9b0a",
    "owner": "Ayla.Rippin",
    "site": "legal incomplete trachoma",
  },
  {
    "entryTime": 1713435407984,
    "id": "999c08cc-24b6-4f06-8670-1bd537ba57b4",
    "owner": "Ayla.Rippin",
    "site": "exotic warmhearted aside",
  },
  {
    "entryTime": 1710384619990,
    "id": "e0e04ebd-0d72-4737-ae6f-e4ff6f73b773",
    "owner": "Ayla.Rippin",
    "site": "humming past mathematics",
  },
  {
    "entryTime": 1709047763284,
    "id": "4b4f8673-789e-4e95-bc4e-63a178af2004",
    "owner": "Ayla.Rippin",
    "site": "original pitiful resource",
  },
  {
    "entryTime": 1708646790612,
    "id": "21f30425-de80-4f19-91c6-e4b952b300a6",
    "owner": "Ayla.Rippin",
    "site": "bustling normal convert",
  },
  {
    "entryTime": 1706303469623,
    "id": "d2759583-35b7-4560-a8c2-a45d98f5d21c",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": 1703119088064,
    "id": "e8d1f498-eb56-4a8d-95af-b9687a99069d",
    "owner": "Ayla.Rippin",
    "site": "voluminous heartfelt imprisonment",
  },
  {
    "entryTime": 1703042255618,
    "id": "506d1720-993d-41b2-bf6b-416f751ede0e",
    "owner": "Ayla.Rippin",
    "site": "damp forsaken chapter",
  },
  {
    "entryTime": 1702936868184,
    "id": "4a0d0b09-80dc-4c9b-8757-6629056fb53d",
    "owner": "Ayla.Rippin",
    "site": "wry boring examiner",
  },
  {
    "entryTime": 1701475649865,
    "id": "e9de3454-9596-4d11-8195-674351028ff7",
    "owner": "Ayla.Rippin",
    "site": "ideal blond spume",
  },
  {
    "entryTime": 1701404713612,
    "id": "41e8e28d-461d-4bd0-9149-d430e1b2f7a7",
    "owner": "Ayla.Rippin",
    "site": "steep aromatic broccoli",
  },
  {
    "entryTime": 1700475645646,
    "id": "dd3b3ef1-ae94-4a9e-a991-ec1fa2af43c5",
    "owner": "Ayla.Rippin",
    "site": "bold staid lode",
  },
  {
    "entryTime": 1699468421114,
    "id": "3efdb5cf-2128-49d3-8ce4-9c43744a32c9",
    "owner": "Ayla.Rippin",
    "site": "humble crazy cockpit",
  },
  {
    "entryTime": 1699418696731,
    "id": "216ddf91-9cd4-4345-99a3-cfeea61ad12b",
    "owner": "Ayla.Rippin",
    "site": "original pitiful resource",
  },
  {
    "entryTime": 1699088498825,
    "id": "1617f76b-fc65-4a6e-8c12-ef1ff35efac0",
    "owner": "Ayla.Rippin",
    "site": "modern sorrowful girdle",
  },
  {
    "entryTime": 1696049056141,
    "id": "a520b5da-51ad-42b6-b4e5-63ba0d35bc18",
    "owner": "Ayla.Rippin",
    "site": "frequent realistic paramedic",
  },
  {
    "entryTime": 1694555843727,
    "id": "f98f941c-bca4-4680-963e-537fe767b41e",
    "owner": "Ayla.Rippin",
    "site": "whirlwind measly subset",
  },
  {
    "entryTime": 1693208159250,
    "id": "8d4659f2-40ae-489b-bb81-05e0102a8fcf",
    "owner": "Ayla.Rippin",
    "site": "utter extraneous calm",
  },
  {
    "entryTime": 1692484926006,
    "id": "cd44e36d-7b86-4783-bff2-bdcd9634dfa7",
    "owner": "Ayla.Rippin",
    "site": "lost profuse garlic",
  },
  {
    "entryTime": 1692105390941,
    "id": "3207ada6-eadc-4d3a-97cc-aae5d9e5e463",
    "owner": "Ayla.Rippin",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": 1691314875221,
    "id": "51c35886-a95b-4305-be3a-46e8b36a3a4d",
    "owner": "Ayla.Rippin",
    "site": "meaty weird good",
  },
  {
    "entryTime": 1690727643431,
    "id": "c9cde5b9-689f-49d2-a25b-f2a271ded83a",
    "owner": "Ayla.Rippin",
    "site": "rundown joyous put",
  },
  {
    "entryTime": 1684921970536,
    "id": "3c03c6ae-cf09-4ad8-91a4-e3e3508b7a29",
    "owner": "Ayla.Rippin",
    "site": "modern sorrowful girdle",
  },
  {
    "entryTime": 1683614665216,
    "id": "d4afca6c-61bd-47ea-89d7-afbb228fd65d",
    "owner": "Ayla.Rippin",
    "site": "joint bogus exit",
  },
  {
    "entryTime": 1680960960889,
    "id": "73dbc6e1-465f-4911-9a64-c3164448e17d",
    "owner": "Ayla.Rippin",
    "site": "yummy fitting waterwheel",
  },
  {
    "entryTime": 1680872051148,
    "id": "a5ce9dd4-f436-4930-831c-497eac34256a",
    "owner": "Ayla.Rippin",
    "site": "well-worn upbeat trillion",
  },
  {
    "entryTime": 1680585547793,
    "id": "d34bd212-d0ce-456c-8b04-1b2206686299",
    "owner": "Ayla.Rippin",
    "site": "silky sharp brilliant",
  },
  {
    "entryTime": 1680075577702,
    "id": "e06b6a65-f4c9-4486-8f24-020b91109cf7",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": 1679179491134,
    "id": "33792d0a-b8f6-4a8c-8280-156254193aa5",
    "owner": "Ayla.Rippin",
    "site": "far-off critical machine",
  },
  {
    "entryTime": 1678126984516,
    "id": "a83b7a6d-60a2-46b0-af93-eb8a55bc280e",
    "owner": "Ayla.Rippin",
    "site": "monumental wild standardization",
  },
  {
    "entryTime": 1677165480734,
    "id": "d20bd6ce-3855-415d-88e1-87d3f17799e5",
    "owner": "Ayla.Rippin",
    "site": "good-natured bountiful relay",
  },
  {
    "entryTime": 1676339228868,
    "id": "a6e3d3bf-bbfd-42ba-b994-8dcc48b322d6",
    "owner": "Ayla.Rippin",
    "site": "spotless gifted gallon",
  },
]
`;

exports[`Log entries E2E tests when searching log entries will return a 400 response if the query parameters are invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "startDate",
      ],
      "received": "nan",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "endDate",
      ],
      "received": "nan",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "skip",
      ],
      "type": "number",
    },
    {
      "code": "too_big",
      "exact": false,
      "inclusive": true,
      "maximum": 500,
      "message": "Number must be less than or equal to 500",
      "path": [
        "limit",
      ],
      "type": "number",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'entryTime' | 'logNumber', received 'wetness'",
      "options": [
        "entryTime",
        "logNumber",
      ],
      "path": [
        "sortBy",
      ],
      "received": "wetness",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'asc' | 'desc', received 'backwards'",
      "options": [
        "asc",
        "desc",
      ],
      "path": [
        "sortOrder",
      ],
      "received": "backwards",
    },
  ],
}
`;

exports[`Log entries E2E tests when searching log entries will return a 400 response if the start date comes after the end date in the query string 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "startDate",
      ],
      "received": "nan",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "endDate",
      ],
      "received": "nan",
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will allow an admin to update any log entry 1`] = `
{
  "air": [
    {
      "count": 1,
      "endPressure": 1040,
      "material": "al",
      "name": "raw cushion",
      "o2Percent": 28.8,
      "pressureUnit": "psi",
      "startPressure": 2940,
      "volume": 4,
      "workingPressure": 300,
    },
    {
      "count": 1,
      "endPressure": 52.188035525381565,
      "material": "fe",
      "name": "caring poem",
      "o2Percent": 39.4,
      "pressureUnit": "bar",
      "startPressure": 191.41511167166755,
      "volume": 18,
      "workingPressure": 300,
    },
  ],
  "conditions": {
    "temperatureUnit": "C",
  },
  "createdAt": 1675439447000,
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": 1582583450944,
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "depthUnit": "m",
    "maxDepth": 28.2,
  },
  "equipment": {
    "weight": 2.77,
    "weightUnit": "kg",
  },
  "id": "216ddf91-9cd4-4345-99a3-cfeea61ad12b",
  "logNumber": 102,
  "notes": "I did a dive!",
  "tags": [],
  "timing": {
    "bottomTime": 46,
    "duration": 58.32,
    "entryTime": 1710965520000,
    "timezone": "Asia/Tokyo",
  },
  "updatedAt": 1721757853236,
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "too_small",
      "exact": false,
      "inclusive": false,
      "message": "Number must be greater than 0",
      "minimum": 0,
      "path": [
        "logNumber",
      ],
      "type": "number",
    },
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "timing",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "notes",
      ],
      "received": "number",
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the request body is missing 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "timing",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the request body is missing required fields 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "timing",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the site ID cannot be found 1`] = `"Dive site with ID "e637a808-90cb-4fba-823e-35cd1898ee4a" not found."`;

exports[`Log entries E2E tests when updating an existing log entry will update the requested log entry 1`] = `
{
  "air": [
    {
      "count": 1,
      "endPressure": 1040,
      "material": "al",
      "name": "raw cushion",
      "o2Percent": 28.8,
      "pressureUnit": "psi",
      "startPressure": 2940,
      "volume": 4,
      "workingPressure": 300,
    },
    {
      "count": 1,
      "endPressure": 52.188035525381565,
      "material": "fe",
      "name": "caring poem",
      "o2Percent": 39.4,
      "pressureUnit": "bar",
      "startPressure": 191.41511167166755,
      "volume": 18,
      "workingPressure": 300,
    },
  ],
  "conditions": {
    "temperatureUnit": "C",
  },
  "createdAt": 1675439447000,
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": 1582583450944,
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "depthUnit": "m",
    "maxDepth": 28.2,
  },
  "equipment": {
    "weight": 2.77,
    "weightUnit": "kg",
  },
  "id": "216ddf91-9cd4-4345-99a3-cfeea61ad12b",
  "logNumber": 102,
  "notes": "I did a dive!",
  "tags": [],
  "timing": {
    "bottomTime": 46,
    "duration": 58.32,
    "entryTime": 1710965520000,
    "timezone": "Asia/Tokyo",
  },
  "updatedAt": 1721757853101,
}
`;
